Alignment fix for empty match column message

--- a/app/styles/home.css
+++ b/app/styles/home.css
@@ -464,6 +464,8 @@
 
 .newhires-list {
   flex: 1;
+  display: flex;
+  flex-direction: column;
 }
 
 .newhires-list.unmatched {
@@ -485,7 +487,10 @@
   font-size: 1.3rem;
   color: gray;
   text-align: center;
-  margin-top: 50%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .teams-list img {
